--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ path = "src/ewatercycle_hype/__init__.py"
 
 [project]
 name = "ewatercycle-hype"
-description = "Template project for starting a new eWaterCycle plugin"
+description = "eWaterCycle plugin for HYPE hydrological model"
 readme = "README.md"
 license = "Apache-2.0"
 version = "0.0.1"
